@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Block
 admin.caption.dbcp.whenexhaustedaction.fail=Fail
 admin.caption.dbcp.whenexhaustedaction.grow=Grow
 admin.caption.defaulttopic=Default topic
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=File-system directory
 admin.caption.filedirhelp=An existing directory in which JAMWiki system files can be stored.
 admin.caption.forceusername=Disable anonymous editing
