@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Sperren
 admin.caption.dbcp.whenexhaustedaction.fail=Fehler
 admin.caption.dbcp.whenexhaustedaction.grow=Wachsen
 admin.caption.defaulttopic=Standard-Thema
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Verzeichnis f\u00FCr das Dateisystem
 admin.caption.filedirhelp=Ein existierendes Verzeichnis in dem JAMWiki System Dateien abgespeichert werden k\u00F6nnen.
 admin.caption.forceusername=Eingabe des Benutzernamens erzwingen
