@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Bloquer
 admin.caption.dbcp.whenexhaustedaction.fail=Echec
 admin.caption.dbcp.whenexhaustedaction.grow=Augmenter
 admin.caption.defaulttopic=Sujet par d\u00E9faut
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=R\u00E9pertoire du syst\u00E8me de fichiers
 admin.caption.filedirhelp=Un dossier existant dans lequel JAMWiki pourra stocker ses fichiers syst\u00E8mes.
 admin.caption.forceusername=Forcer l'utilisation d'un nom d'utilisateur
