@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Blocca
 admin.caption.dbcp.whenexhaustedaction.fail=Fallisci
 admin.caption.dbcp.whenexhaustedaction.grow=Incrementa
 admin.caption.defaulttopic=Argomento di default
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Directory su filesystem
 admin.caption.filedirhelp=An existing directory in which JAMWiki system files can be stored.
 admin.caption.forceusername=Forza l'utilizzo degli username
