@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Blokkeren
 admin.caption.dbcp.whenexhaustedaction.fail=Falen
 admin.caption.dbcp.whenexhaustedaction.grow=Groeien
 admin.caption.defaulttopic=Startpagina
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Bestandssysteemfolder
 admin.caption.filedirhelp=Een bestaande folder waar JAMWiki-systeembestanden kunnen bewaard worden.
 admin.caption.forceusername=Forceer het invullen van gebruikersnaam
