@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=Blokowanie
 admin.caption.dbcp.whenexhaustedaction.fail=Niepowodzenie
 admin.caption.dbcp.whenexhaustedaction.grow=Zwi\u0119kszenie
 admin.caption.defaulttopic=Domy\u015Blny temat
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=Katalog systemowy
 admin.caption.filedirhelp=Istniej\u0105cy katalog w kt\u00F3rym s\u0105 zapisywane pliki systemowe.
 admin.caption.forceusername=Wymuszaj ustawienie nazwy u\u017Cytkownika
