@@ -32,6 +32,7 @@ admin.caption.dbcp.whenexhaustedaction.block=\u0437\u0430\u0431\u043B\u043E\u043
 admin.caption.dbcp.whenexhaustedaction.fail=\u043F\u043E\u043C\u0438\u043B\u043A\u0430
 admin.caption.dbcp.whenexhaustedaction.grow=\u0437\u0431\u0456\u043B\u044C\u0448\u0438\u0442\u0438
 admin.caption.defaulttopic=\u0421\u0442\u0430\u0440\u0442\u043E\u0432\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0430
+admin.caption.externallinknewwindow=Open external links in new window
 admin.caption.filedir=\u0414\u0438\u0440\u0435\u043A\u0442\u043E\u0440\u0456\u044F \u0444\u0430\u0439\u043B\u043E\u0432\u043E\u0457 \u0441\u0438\u0441\u0442\u0435\u043C\u0438
 admin.caption.filedirhelp=\u0406\u0441\u043D\u0443\u044E\u0447\u0430 \u0434\u0438\u0440\u0435\u043A\u0442\u043E\u0440\u0456\u044F \u0432 \u044F\u043A\u0456\u0439 \u043C\u043E\u0436\u0443\u0442\u044C \u0437\u0431\u0435\u0440\u0456\u0433\u0430\u0442\u0438\u0441\u044F \u0444\u0430\u0439\u043B\u0438 JAMWiki.
 admin.caption.forceusername=\u041E\u0431\u043E\u0432'\u044F\u0437\u043A\u043E\u0432\u043E \u0432\u0445\u043E\u0434\u0438\u0442\u0438 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443 \u043F\u0440\u0438 \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u0456
